welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    var couleur:Boolean = blanc
    couleur = getCouleurSol()
    do {
    	avance()
    	
    }
   	 	while(couleur == Color.green)  		
    				
   	 	
    		if(estFaceMur){
    	return
    }
        return couleur
}        
